# NewBlashPlayer

./: .gitignore
Examples/Ubuntu/NewBlashPlayer/: CMakeLists.txt  NBGLSurface.cpp  NBGLSurface.h  NBMainApp.cpp  NBMainApp.h  NBMainWindow.cpp  NBMainWindow.h  main.cpp
Examples/Ubuntu/NewBlashPlayer/XGUI/: Button.cpp  Button.hpp  CMakeLists.txt  Event.hpp  Flags.hpp  FontXft.cpp  FontXft.hpp  Input.cpp  Input.hpp  KeyCodes.hpp  Painter.cpp  Painter.hpp  Screen.cpp  Screen.hpp  ScrollArea.cpp  ScrollArea.hpp  ScrollBar.cpp  ScrollBar.hpp  SurfaceView.cpp  SurfaceView.hpp  TextBuffer.cpp  TextBuffer.hpp  TextLine.cpp  TextLine.hpp  TextSelection.cpp  TextSelection.hpp  TextView.cpp  TextView.hpp  Types.cpp  Types.hpp  Widget.cpp  Widget.hpp  Window.cpp  Window.hpp  XApp.cpp  XApp.hpp  Xgui  Xgui_defs.hpp  bind.hpp  functional.hpp  (+1 more)
Examples/iOS/NewBlashPlayer/NewBlashPlayer/: NBEnhancedViewController.h  NBEnhancedViewController.m  NBEnhancedViewController.xib  NBGLESUtils.h  NBGLESUtils.m  NBPlayerViewController.m  (+2 more)
Examples/iOS/NewBlashPlayer/NewBlashPlayer.xcodeproj/: project.pbxproj
NBMediaPlayer/include/: NBMediaPlayer.h  NBRendererInfo.h  NBTimedEventQueue.h
NBMediaPlayer/src/: NBAudioPlayer.cpp  NBMediaPlayer.cpp  NBVideoFrame.cpp
NBMediaPlayer/src/datasource/: NBBeastSource.cpp  NBFFmpegSource.cpp  NBFFmpegSource.h
NBMediaPlayer/src/decoder/: NBFFmpegADecoder.cpp  NBFFmpegVDecoder.cpp  NBMediaDecoder.cpp  NBVideoToolboxDecoder.cpp
NBMediaPlayer/src/extractor/: NBFFmpegExtractor.cpp
NBMediaPlayer/src/foundation/: NBTimedEventQueue.cpp
NBMediaPlayer/src/renderer/: NBALAudioRenderer.cpp  NBCVOpenGLESRenderer.cpp  NBGLFrameBuffer.cpp  NBGLFrameBuffer.h  NBGLVideoRenderer.cpp  NBGLVideoRenderer.h  NBGLYUV420PRenderer.cpp  NBGLYUV420PRenderer.h  NBMediaCodecVRenderer.cpp  NBMediaCodecVRenderer.h  NBVideoRenderer.h
(+49 files in other folders)
